--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,5 @@
-- Implement tried/untried and moving between them. This is the next big thing.
-  Requires storing a flag with each cocktail, then filtering based on each flag?
-  Add a checkbox in create cocktail page for 'tried?' aswell. 
-- Add add button in other list and maybe make create navigate based on whether the created cocktail
-  is tried or not. Like it takes you to the page of the one you just made.
 - Add a back button in create page.
-- Add cocktail item expansion
+- Add cocktail item expansion - nav to new page? want a nice transition
 - Add cocktail description
+- Moving between tried/untried list
 - Make whole thing nicer
