--- a/todo.txt
+++ b/todo.txt
@@ -6,6 +6,9 @@ QOL Changes
 - Something to look into in the future is image optimisation and lazy loading. If it starts to get too slow to load the 
 - tried list.
 
+- Scroll height remembering
+- Make untried list cap word count
+
 features
 
 - Bar
